# ripgrep-stream

./: Cargo.toml  README.md  example_json.txt
src/: main.rs
