[package]
name = "ripgrep-stream"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.1.8", features = ["derive"] }
grep = "0.2.11"
#rayon = "1.7.0"
serde = { version = "1.0.154", features = ["derive"] }
serde_json = "1.0.94"
tar = "0.4.38"
termcolor = "1.2.0"
